force-app/main/default/objects/Inquiry_Reassignment__c/Inquiry_Reassignment__c.object-meta.xml
<CustomObject>
    <description>This object captures each occasion when an Inquiry is reassigned from an agent based on a lack of activity such as 

- No status change or logged activity within the 24 hours after the Inquiry being assigned while in the &apos;Not Yet Contacted&apos; status
- No status change or logged activity within 7 days while in the &apos;Not Yet Contacted&apos;, &apos;Searching&apos;, &apos;Viewing&apos; status
- No status change or logged activity within 30 days while in the &apos;Offering&apos; status</description>
    <label>Inquiry Reassignment</label>
    <nameField>
        <displayFormat>Re-Assign-{000}</displayFormat>
        <label>Inquiry Reassignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Reassignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>