force-app/main/default/objects/Inquiry_Reassignment__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the agent that has had the Inquiry taken away (reassigned from..)</inlineHelpText>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inquiry_Reassignments</relationshipName>
    <type>Lookup</type>
</CustomField>