force-app/main/default/objects/Inquiry_Reassignment__c/fields/Inquiry_Contact__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Contact that was / is associated with this Inquiry when reassigned</inlineHelpText>
    <label>Inquiry Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inquiry Reassignments</relationshipLabel>
    <relationshipName>Inquiry_Reassignments</relationshipName>
    <type>Lookup</type>
</CustomField>