force-app/main/default/objects/Inquiry_Reassignment__c/fields/Inquiry_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Created_Date__c</fullName>
    <formula>Request__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry Created Date</label>
    <type>Date</type>
</CustomField>