force-app/main/default/objects/Inquiry_Reassignment__c/fields/Inquiry_Status_when_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Status_when_Reassigned__c</fullName>
    <inlineHelpText>This is the &apos;Status&apos; of the Inquiry when it was reassigned</inlineHelpText>
    <label>Inquiry Status when Reassigned</label>
    <length>250</length>
    <type>Text</type>
</CustomField>