force-app/main/default/objects/Inquiry_Reassignment__c/fields/IsQueue__c.field-meta.xml
<CustomField>
    <fullName>IsQueue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsQueue</label>
    <type>Checkbox</type>
</CustomField>