force-app/main/default/objects/Inquiry_Reassignment__c/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <inlineHelpText>This is the last logged activity on this Inquiry when it was reassigned</inlineHelpText>
    <label>Last Activity</label>
    <type>DateTime</type>
</CustomField>