force-app/main/default/objects/Inquiry_Reassignment__c/fields/Reassigned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Date_Time__c</fullName>
    <inlineHelpText>This is when this Inquiry record was reassigned</inlineHelpText>
    <label>Reassigned Date / Time</label>
    <type>DateTime</type>
</CustomField>