force-app/main/default/objects/Inquiry_Reassignment__c/fields/Reassigned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Reason__c</fullName>
    <inlineHelpText>This is the reason (the associated workflow) that the Inquiry has been reassigned</inlineHelpText>
    <label>Reassigned Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>