force-app/main/default/objects/Inquiry_Reassignment__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Inquiry that has been reassigned from the agent</inlineHelpText>
    <label>Inquiry Record</label>
    <referenceTo>pba__Request__c</referenceTo>
    <relationshipLabel>Inquiry Reassignments</relationshipLabel>
    <relationshipName>Inquiry_Reassignments</relationshipName>
    <type>Lookup</type>
</CustomField>