force-app/main/default/objects/Inquiry_Reassignment__c/listViews/Reassigned_in_the_last_7_days.listView-meta.xml
<ListView>
    <fullName>Reassigned_in_the_last_7_days</fullName>
    <columns>NAME</columns>
    <columns>Agent__c</columns>
    <columns>Request__c</columns>
    <columns>Reassigned_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Reassigned in the last 7 days</label>
</ListView>