force-app/main/default/objects/Inquiry_Reassignment__c/listViews/Today_s_Reassignments.listView-meta.xml
<ListView>
    <fullName>Today_s_Reassignments</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inquiry_Created_Date__c</columns>
    <columns>Request__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Reassigned_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Today&apos;s Reassignments</label>
    <sharedTo>
        <role>Call_Center</role>
    </sharedTo>
</ListView>